// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Order MarketPlaceCustomLabel MarketPlaceCustomLabel: changeOn=50 currencySign=Br humanPaymentType=Наличная paymentType=cash  1`] = `
<DocumentFragment>
  <div
    class="CustomLabel-root"
    classes="[object Object]"
    label="Оплата:"
    value="Наличная, нужна сдача с 50 br"
  >
    <div
      class="CustomLabel-label"
    >
      Оплата:
    </div>
    <div
      class="CustomLabel-value"
      data-label="Оплата:"
      data-testid="orders__order-property-value"
    >
      Наличная, нужна сдача с 50 br
    </div>
  </div>
</DocumentFragment>
`;

exports[`Order MarketPlaceCustomLabel MarketPlaceCustomLabel: changeOn=50 currencySign=Br humanPaymentType=Наличная paymentType=cashless  1`] = `
<DocumentFragment>
  <div
    class="CustomLabel-root"
    classes="[object Object]"
    label="Оплата:"
    value="Наличная"
  >
    <div
      class="CustomLabel-label"
    >
      Оплата:
    </div>
    <div
      class="CustomLabel-value"
      data-label="Оплата:"
      data-testid="orders__order-property-value"
    >
      Наличная
    </div>
  </div>
</DocumentFragment>
`;

exports[`Order MarketPlaceCustomLabel MarketPlaceCustomLabel: changeOn=50 currencySign=₸ humanPaymentType=Наличная paymentType=cash  1`] = `
<DocumentFragment>
  <div
    class="CustomLabel-root"
    classes="[object Object]"
    label="Оплата:"
    value="Наличная, нужна сдача с 50 ₸"
  >
    <div
      class="CustomLabel-label"
    >
      Оплата:
    </div>
    <div
      class="CustomLabel-value"
      data-label="Оплата:"
      data-testid="orders__order-property-value"
    >
      Наличная, нужна сдача с 50 ₸
    </div>
  </div>
</DocumentFragment>
`;

exports[`Order MarketPlaceCustomLabel MarketPlaceCustomLabel: changeOn=50 currencySign=₸ humanPaymentType=Наличная paymentType=cashless  1`] = `
<DocumentFragment>
  <div
    class="CustomLabel-root"
    classes="[object Object]"
    label="Оплата:"
    value="Наличная"
  >
    <div
      class="CustomLabel-label"
    >
      Оплата:
    </div>
    <div
      class="CustomLabel-value"
      data-label="Оплата:"
      data-testid="orders__order-property-value"
    >
      Наличная
    </div>
  </div>
</DocumentFragment>
`;

exports[`Order MarketPlaceCustomLabel MarketPlaceCustomLabel: changeOn=50 currencySign=₽ humanPaymentType=Наличная paymentType=cash  1`] = `
<DocumentFragment>
  <div
    class="CustomLabel-root"
    classes="[object Object]"
    label="Оплата:"
    value="Наличная, нужна сдача с 50 ₽"
  >
    <div
      class="CustomLabel-label"
    >
      Оплата:
    </div>
    <div
      class="CustomLabel-value"
      data-label="Оплата:"
      data-testid="orders__order-property-value"
    >
      Наличная, нужна сдача с 50 ₽
    </div>
  </div>
</DocumentFragment>
`;

exports[`Order MarketPlaceCustomLabel MarketPlaceCustomLabel: changeOn=50 currencySign=₽ humanPaymentType=Наличная paymentType=cashless  1`] = `
<DocumentFragment>
  <div
    class="CustomLabel-root"
    classes="[object Object]"
    label="Оплата:"
    value="Наличная"
  >
    <div
      class="CustomLabel-label"
    >
      Оплата:
    </div>
    <div
      class="CustomLabel-value"
      data-label="Оплата:"
      data-testid="orders__order-property-value"
    >
      Наличная
    </div>
  </div>
</DocumentFragment>
`;

exports[`Order MarketPlaceCustomLabel MarketPlaceCustomLabel: changeOn=null currencySign=Br humanPaymentType=Наличная paymentType=cash  1`] = `
<DocumentFragment>
  <div
    class="CustomLabel-root"
    classes="[object Object]"
    label="Оплата:"
    value="Наличная, сдача не нужна"
  >
    <div
      class="CustomLabel-label"
    >
      Оплата:
    </div>
    <div
      class="CustomLabel-value"
      data-label="Оплата:"
      data-testid="orders__order-property-value"
    >
      Наличная, сдача не нужна
    </div>
  </div>
</DocumentFragment>
`;

exports[`Order MarketPlaceCustomLabel MarketPlaceCustomLabel: changeOn=null currencySign=Br humanPaymentType=Наличная paymentType=cashless  1`] = `
<DocumentFragment>
  <div
    class="CustomLabel-root"
    classes="[object Object]"
    label="Оплата:"
    value="Наличная"
  >
    <div
      class="CustomLabel-label"
    >
      Оплата:
    </div>
    <div
      class="CustomLabel-value"
      data-label="Оплата:"
      data-testid="orders__order-property-value"
    >
      Наличная
    </div>
  </div>
</DocumentFragment>
`;

exports[`Order MarketPlaceCustomLabel MarketPlaceCustomLabel: changeOn=null currencySign=₸ humanPaymentType=Наличная paymentType=cash  1`] = `
<DocumentFragment>
  <div
    class="CustomLabel-root"
    classes="[object Object]"
    label="Оплата:"
    value="Наличная, сдача не нужна"
  >
    <div
      class="CustomLabel-label"
    >
      Оплата:
    </div>
    <div
      class="CustomLabel-value"
      data-label="Оплата:"
      data-testid="orders__order-property-value"
    >
      Наличная, сдача не нужна
    </div>
  </div>
</DocumentFragment>
`;

exports[`Order MarketPlaceCustomLabel MarketPlaceCustomLabel: changeOn=null currencySign=₸ humanPaymentType=Наличная paymentType=cashless  1`] = `
<DocumentFragment>
  <div
    class="CustomLabel-root"
    classes="[object Object]"
    label="Оплата:"
    value="Наличная"
  >
    <div
      class="CustomLabel-label"
    >
      Оплата:
    </div>
    <div
      class="CustomLabel-value"
      data-label="Оплата:"
      data-testid="orders__order-property-value"
    >
      Наличная
    </div>
  </div>
</DocumentFragment>
`;

exports[`Order MarketPlaceCustomLabel MarketPlaceCustomLabel: changeOn=null currencySign=₽ humanPaymentType=Наличная paymentType=cash  1`] = `
<DocumentFragment>
  <div
    class="CustomLabel-root"
    classes="[object Object]"
    label="Оплата:"
    value="Наличная, сдача не нужна"
  >
    <div
      class="CustomLabel-label"
    >
      Оплата:
    </div>
    <div
      class="CustomLabel-value"
      data-label="Оплата:"
      data-testid="orders__order-property-value"
    >
      Наличная, сдача не нужна
    </div>
  </div>
</DocumentFragment>
`;

exports[`Order MarketPlaceCustomLabel MarketPlaceCustomLabel: changeOn=null currencySign=₽ humanPaymentType=Наличная paymentType=cashless  1`] = `
<DocumentFragment>
  <div
    class="CustomLabel-root"
    classes="[object Object]"
    label="Оплата:"
    value="Наличная"
  >
    <div
      class="CustomLabel-label"
    >
      Оплата:
    </div>
    <div
      class="CustomLabel-value"
      data-label="Оплата:"
      data-testid="orders__order-property-value"
    >
      Наличная
    </div>
  </div>
</DocumentFragment>
`;
